@@ -51,7 +51,7 @@ public class JvmMetrics {
     private final JvmGCMetricsLogger gcLogger;
 
     private final String componentName;
-    private final static Map<String, Class<? extends JvmGCMetricsLogger>> gcLoggerMap = new HashMap<>();
+    private static final Map<String, Class<? extends JvmGCMetricsLogger>> gcLoggerMap = new HashMap<>();
     static {
         try {
             directMemoryUsage = io.netty.util.internal.PlatformDependent.class
@@ -71,7 +71,8 @@ public class JvmMetrics {
         JvmGCMetricsLogger gcLoggerImpl = null;
         if (StringUtils.isNotBlank(gcLoggerImplClassName)) {
             try {
-                gcLoggerImpl = (JvmGCMetricsLogger) Class.forName(gcLoggerImplClassName).newInstance();
+                gcLoggerImpl = (JvmGCMetricsLogger) Class.forName(gcLoggerImplClassName)
+                        .getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 log.error("Failed to initialize jvmGCMetricsLogger {} due to {}", jvmGCMetricsLoggerClassName,
                         e.getMessage(), e);
